Implemented Initial GUI Support for Displaying and Editing Quest Information
Added the base of GUI support:
    - It displays all information about the quest, including name, description, the number of checkpoints, the amount of rewards, and other relevant details.
    - GUIs are stored in QuestGUI.java.

Removed some of the debugs.